--- a/android/SeatCraftAppPickerExample/app/src/main/res/layout/fragment_second.xml
+++ b/android/SeatCraftAppPickerExample/app/src/main/res/layout/fragment_second.xml
@@ -9,6 +9,7 @@
 
     <com.seatcraft.picker.SeatCraftPickerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/picker_view"/>
 
 </LinearLayout>
